--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     >
       <img
         class="logo"
-        src="https://i.postimg.cc/j2bc0kBf/Mega-Stars-Logo-removebg-preview.png"
+        src="https://postimg.cc/xXxqvSCQ"
         alt="Mega Stars Tourism Logo"
         style="
           padding-left: 10px;
@@ -251,3 +251,4 @@
     </div>
   </body>
 </html>
+
