--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     >
       <img
         class="logo"
-        src="https://postimg.cc/xXxqvSCQ"
+        src="https://i.postimg.cc/25mvfkN1/Mega-Stars-Logo-removebg-preview.png"
         alt="Mega Stars Tourism Logo"
         style="
           padding-left: 10px;
@@ -251,4 +251,5 @@
     </div>
   </body>
 </html>
+
 
